# gdot-dataset-conversion

./: .gitignore  CLAUDE.md  README.md  chat1.txt  chat2.txt  chatsofar.txt  command-notes.txt  how-lsdtq-works.txt  lastchat.md  maxphasetimeforfutureexperiment.txt  notes.txt
data/7065/: 0502.md  0503.md  0504.md  0505.md  0505data.txt  0506.md  0506data.txt  0507.md  0507data.txt  0508.md  0508data.txt  0513.md
old-dont-use/atspm_digitizer/: README.md  pyproject.toml
old-dont-use/atspm_digitizer/scripts/: make_digit_templates.py  visualize_results.py
old-dont-use/atspm_digitizer/src/atspm_digitizer/: __init__.py  cli.py  extract.py  mdtables.py  naming.py  output.py  plotbox.py  tmc_extract.py  tmc_header.py  tmc_naming.py  tmc_output.py  validate.py  yaxis.py
presentation/: outline.md
result/7065/: 0502_ebwb_advance-stopbar.csv  0502_ebwb_matrix.csv  (+31 more)
rlagent/: README.md  actuated_baseline.py  aggregate_ci.py  ci_worker.py  eval_extra_scales.py  eval_heldout.py  eval_scales.py  extract_metrics.py  finalize_ci.py  fixed_time.py  gen_results_table.py  lstdq.py  maxpressure_baseline.py  metrics.py  plan.md  plot_metrics.py  regulations.md  run_ci_batch.sh  stages.py  sumo_env.py  train.py  train_random.py  trainutil.py  val_select.py  watch.py
sumodemand/: 0505.rou.xml  0505.sumocfg  0506.rou.xml  0506.sumocfg  0507.rou.xml  0507.sumocfg  0508.rou.xml  0508.sumocfg  README.md  build_demand.py  portal_report.py
sumotwin/: 7065.net.xml  LANE_CONFIG.md  README.md  osm_raw.osm.xml
v2twin/: 7065.sumocfg  7065.view.xml  7065_slip.net.xml  build.sh  digitize.py
(+447 files in other folders)
