[project]
name = "atspm-digitizer"
version = "0.1.0"
description = "Digitize GDOT ATSPM Approach Volume chart images into 15-minute volume CSVs"
readme = "README.md"
authors = [
    { name = "AndyMalela", email = "ifal.n.malela@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "rapidocr-onnxruntime>=1.4.4",
]

[project.scripts]
atspm-digitizer = "atspm_digitizer.cli:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
